--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Socket.IO Chat Example</title>
   <link rel="stylesheet" href="style.css">
+  <script>
+   alert("Annoying message to test CI/CD Pipeline");
+</script>
 </head>
 <body>
   <ul class="pages">
